--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -252,7 +252,7 @@
         <h1 class="animated-heading">Create Your Account</h1>
         <p class="animated-subtext">Let’s get you blogging in style 💫</p>
 
-        <form action="/user/signup" method="post" class="mt-4 text-start">
+        <form action="/user/signup" method="post" enctype="multipart/form-data" class="mt-4 text-start">
           <% if (user) { %>
             <div class="mb-3 text-center">
               <img src="<%= user.profileImageURL %>" alt="Profile Image" width="100" height="100"
@@ -277,6 +277,14 @@
                   <label for="passwordInput" class="form-label">Password</label>
                   <input type="password" class="form-control" id="passwordInput" name="password">
                 </div>
+
+                <!-- 🔽 Profile Image Upload Field -->
+                <div class="mb-3">
+                  <label for="profileImage" class="form-label">Upload Profile Image</label>
+                  <input type="file" class="form-control" id="profileImage" name="profileImage" accept="image/*" />
+                </div>
+
+
                 <button type="submit" class="btn btn-primary w-100">Submit</button>
         </form>
       </div>
